# pysocks5

./: .gitignore  Dockerfile  README.md  logger.py  main.py  pyproject.toml
socks5/: __init__.py  tcp.py  types.py  udp.py
socks5/auth/: __init__.py  gssapi.py  username.py
