[project]
name = "pysocks5"
version = "2024.1.0"
dependencies = [

]
requires-python = ">=3.12"
authors = [
    {name = "Dhiego Cassiano Fogaça Barbosa", email = "modscleo4@outlook.com"},
]
maintainers = [
    {name = "Dhiego Cassiano Fogaça Barbosa", email = "modscleo4@outlook.com"},
]
description = "A Python implementation of a SOCKS5 compatible server."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["socks5", "server", "proxy"]

[project.urls]
Repository = "https://github.com/modscleo4/pysocks5"
